# libftd2xx-cc1101

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yml
examples/: rx.rs  tx.rs
libftd2xx-cc1101-derive/: Cargo.toml  README.md
libftd2xx-cc1101-derive/src/: lib.rs
src/: io.rs  lib.rs  regs.rs
tests/: mpsse-macro.rs
