[package]
name = "libftd2xx-cc1101"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
description = "Libary for interfacing with CC1101 via FTDI SPI interface"
keywords = ["ftdi", "cc1101"]
categories = ["hardware-support"]
license = "MIT"
repository = "https://github.com/CirrusNeptune/libftd2xx-cc1101.git"
documentation = "https://docs.rs/libftd2xx-cc1101"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
libftd2xx-cc1101-derive = { path = "libftd2xx-cc1101-derive", version = "0.1.0" }
libftd2xx = { git = "https://github.com/CirrusNeptune/libftd2xx-rs", branch = "mpsse-macro" }
modular-bitfield-msb = "~0.11.2"
static_assertions = "~1.1.0"
log = "~0.4.11"
ringbuffer = "~0.7.1"

[dev-dependencies]
version-sync = "~0.9.2"

[features]
static = ["libftd2xx/static"]

[workspace]
members = ["libftd2xx-cc1101-derive"]
