[package]
name = "libftd2xx-cc1101-derive"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
description = "Derive crate for libftd2xx-cc1101"
license = "BSD-3-Clause"
repository = "https://github.com/CirrusNeptune/libftd2xx-cc1101.git"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
